loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:10: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet2:11: error: eof expected but '}' found.
}
^